# ai-labs

lab1/: pyproject.toml
lab1/app/: __init__.py  __main__.py  routes.py  services.py  settings.py
lab1/static/: index.html  node.d.ts  node.d.ts.map  node.deps.json  node.js  node.js.map  node.mjs  node.test.js  node.test.js.map  node.view.tree  package.json  test.html  web.d.ts  web.d.ts.map  web.deps.json  web.js  web.js.map  web.mjs  web.test.js  web.test.js.map
lab2/: pyproject.toml
lab2/app/: __main__.py  inference.py  settings.py  ui.py
